create repo and common function

--- a/client/src/notebook_style/style.css
+++ b/client/src/notebook_style/style.css
@@ -100,10 +100,8 @@
 }
 
 .username-note {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  justify-content: center;
+  margin: 5%; 
 }
 
 .form-continue-btn {
